# chatterbox-streaming

./: GITHUB_ACTIONS_SUMMARY.md  INSTALLATION_GUIDE.md  MANIFEST.in  PACKAGE_README.md  PACKAGING_SUMMARY.md  README.md  STREAMING_PARAMETERS.md  build_package.sh  build_package_uv.sh  build_simple.sh  example_advanced_streaming.py  example_tts_stream.py  example_vc_stream.py  generate_non_stream.py  generate_stream.py  pyproject.toml
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: python-publish.yml  test-pypi-publish.yml  tests.yml
examples/: multilingual_streaming_example.py
src/chatterbox/: __init__.py  tts.py  vc.py
src/chatterbox/models/t3/: llama_configs.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py
voices/: README.md
