[project]
name = "chatterbox-streaming"
version = "0.2.0"
description = "Chatterbox Streaming: Open Source Multilingual TTS with Streaming Support"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["tts", "text-to-speech", "streaming", "multilingual", "voice-cloning", "speech-synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "davidbrowne17", email = "davidbrowne17@gmail.com"}
]
maintainers = [
    {name = "davidbrowne17", email = "davidbrowne17@gmail.com"}
]

dependencies = [
    "numpy>=1.24.0,<1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "matplotlib",
    "whisper-openai",
    "jiwer",
    "sounddevice==0.5.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio==5.44.1",
    "russian-text-stresser @ git+https://github.com/Vuizur/add-stress-to-epub",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/davidbrowne17/chatterbox-streaming"
Repository = "https://github.com/davidbrowne17/chatterbox-streaming"
Issues = "https://github.com/davidbrowne17/chatterbox-streaming/issues"
Documentation = "https://github.com/davidbrowne17/chatterbox-streaming#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
